# Cplus

./: .gitignore
src/QtDesign/: CMakeLists.txt
src/QtDesign/Part1/: CMakeLists.txt  main.cpp
src/QtDesign/Part1/1-1/: CMakeLists.txt  main.cpp
src/QtDesign/Part1/1-10/: CMakeLists.txt  main.cpp
src/QtDesign/Part1/1-11/: CMakeLists.txt  streams.cpp
src/QtDesign/Part1/1-14/: CMakeLists.txt  main.cpp
src/QtDesign/Part1/1-19/: CMakeLists.txt  clargs.cpp  clargs.h
src/QtDesign/Part1/1-3/: CMakeLists.txt  fac2.cpp  fac2.h
src/QtDesign/Part1/1-8/: CMakeLists.txt  qstringdemo.cpp
src/QtDesign/Part1/1-9/: CMakeLists.txt  streamdemo.cpp  streamdemo.h
src/QtDesign/Part2/: CMakeLists.txt  main.cpp
src/QtDesign/Part2/2-16/: CMakeLists.txt  fraction.cpp  fraction.h  main.cpp
src/QtDesign/Part2/2-24/: CMakeLists.txt  main.cpp  thing.cpp  thing.h
src/QtDesign/Part2/2-4/: CMakeLists.txt  fraction.cpp  fraction.h  main.cpp
src/QtDesign/Part2/2-9/: CMakeLists.txt  main.cpp  statics.cpp  statics.h
src/QtDesign/Part3/: CMakeLists.txt
src/QtDesign/Part3/ArgumentList/: CMakeLists.txt  argumentlist.cpp  argumentlist.h  main.cpp
src/QtDesign/Part3/TestPrepare/: CMakeLists.txt  main.cpp  testprepare.cpp  testprepare.h
src/QtDesign/Part3/pointers/: CMakeLists.txt  main.cpp
src/QtDesign/Part3/qstd/: CMakeLists.txt  main.cpp  qstd.cpp  qstd.h
